added recomendation section in index html

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 header, footer {
   background-color: #69afea;
 }
+
+.formToBeFilled {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
