--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,34 @@ header, footer {
   height:10vw;
 }
 
+/* next and previous buttons */
+a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
+}
+
+a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.previous {
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.next {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+
+
 .formToBeFilled {
   line-height: 9vw;
 }
@@ -33,7 +61,7 @@ header, footer {
   background-color: #4caf5014;
   padding: 20%;
   height: 80vw;
-  display:none;
+  /* display:none; */
 }
 
 #explSatisf, #explRec {
