--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   text-align: center;
   width:100%;
   margin:0%;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 header {
@@ -53,12 +53,19 @@ a:hover {
   line-height: 9vw;
 }
 
-.recomendations, .satisfaction, .experience, .usability, .ratings, .userTasks, .productDescription {
+.recomendations, .satisfaction, .experience, .usability, .ratings, .userTasks, .productDescription, .letsGetStarted {
   background-color: #4caf5014;
-  padding: 10%;
+  padding: 5%;
   height: 90vw;
   /* display:none; */
 }
+
+#questionCounter {
+  display: flex;
+  text-align: left;
+  height:5vw;
+  margin: 0%;
+  }
 
 #explSatisf, #explRec {
   height: 120px;
