added the star rating to the question4 html file and some style to stars and title

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,14 @@ a:hover {
   border-radius: 0.5em;
   border-style: ridge;
 }
+
+/* stars */
+#stars {
+  width:100%;
+  font-size: 5vw;
+  margin:0%;
+}
+
+.checked {
+  color: orange;
+}
